--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neurons-animation",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "neurons-animation",
   "author": "appleskiller@163.com",
   "license": "MIT",
@@ -17,7 +17,7 @@
     "release": "node script/release.js"
   },
   "dependencies": {
-    "neurons-utils": "1.0.21"
+    "neurons-utils": "^1.0.23"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.16",
